Job Done the exercise regarding CSS methods is completed

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./CSS/methods.css" />
+    <style>
+      p {
+        background-color: green;
+        color: white;
+        font-size: 18px;
+      }
+    </style>
     <title>Foundations CSS Exercises</title>
   </head>
   <body>
     <div>
       <p>CSS Exercise Mehtods</p>
-      <button>CSS Button</button>
+      <button style="background-color: orange; font-size: 18px">
+        CSS Button
+      </button>
     </div>
   </body>
 </html>
