minaml changes to the index.html file

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     <title>Foundations CSS Exercises</title>
   </head>
   <body>
-    <div>
-      <p>CSS Exercise Mehtods</p>
-      <button style="background-color: orange; font-size: 18px">
-        CSS Button
-      </button>
-    </div>
+    <div>Style me Via External</div>
+    <p>CSS Exercise Mehtods</p>
+    <button style="background-color: orange; font-size: 18px">
+      CSS Button
+    </button>
   </body>
 </html>
