used the grouping selector used it to complete the exercise the added selector is .sharing

--- a/CSS Foundations/Grouping Selectors/index.html
+++ b/CSS Foundations/Grouping Selectors/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div>
-      <button class="one">Button 1</button>
-      <button class="two">Button 2</button>
+      <button class="one sharing">Button 1</button>
+      <button class="two sharing">Button 2</button>
     </div>
   </body>
 </html>
